--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "vim-gitgutter"]
-	path = vim-gitgutter
+	path = .vim/bundle/vim-gitgutter
 	url = https://github.com/safetydank/vim-gitgutter.git
 [submodule "vim-colors-solarized"]
-	path = vim-colors-solarized
+	path = .vim/bundle/vim-colors-solarized
 	url = https://github.com/altercation/vim-colors-solarized.git
 [submodule "ctrlp.vim"]
-	path = ctrlp.vim
+	path = .vim/bundle/ctrlp.vim
 	url = https://github.com/kien/ctrlp.vim.git
