--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,13 @@ unbind '"'
 unbind C-b
 set -g prefix C-a
 
+#force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
+
+#reset escape delay
+set -s escape-time 0
+
 # Splitting windows into panes
 bind v split-window -h
 bind s split-window -v
