--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,9 @@ unbind %
 unbind '"'
 
 #reset prefix
-unbind C-b
 set -g prefix C-a
+unbind C-b
+bind-key C-a send-prefix
 
 #force a reload of the config file
 unbind r
