--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,20 @@
 set -g default-terminal "screen-256color"
+set -g history-limit 5000
 
-#unbind undesirable defaults
+# unbind undesirable defaults
 unbind %
 unbind '"'
 
-#reset prefix
+# reset prefix
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-#force a reload of the config file
+# force a reload of the config file
 unbind r
 bind r source-file ~/.tmux.conf
 
-#reset escape delay
+# reset escape delay
 set -s escape-time 0
 
 # Splitting windows into panes
@@ -72,3 +73,16 @@ set -g status-right '#[fg=colour246]#F | #S #[bg=colour241,fg=colour248]  #H #[b
 set -g window-status-format '|#[fg=colour190] #I #[fg=colour246] #W '
 set -g window-status-current-format '|#[fg=colour190] #I #[bg=colour250,fg=colour236] #W '
 set-option -g status-justify left
+
+# rebind kill window to decrement following windows indexes
+unbind &
+bind & run-shell " ~/bin/tmux-close-window "
+
+# # OSX Clipboard support
+# set-option -g default-command "reattach-to-user-namespace -l sh"
+# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+ 
+# # Linux clipboard support
+# bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer" 
+# bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
