--- a/tmux.conf
+++ b/tmux.conf
@@ -78,10 +78,10 @@ set-option -g status-justify left
 unbind &
 bind & run-shell " ~/bin/tmux-close-window "
 
-# # OSX Clipboard support
-# set-option -g default-command "reattach-to-user-namespace -l sh"
-# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+# OSX Clipboard support
+set-option -g default-command "reattach-to-user-namespace -l sh"
+bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
  
 # # Linux clipboard support
 # bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer" 
