add jshint to vim and fix watchme script

--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule ".vim/bundle/SyntaxRange"]
 	path = .vim/bundle/SyntaxRange
 	url = https://github.com/vim-scripts/SyntaxRange.git
+[submodule ".vim/bundle/jshint2.vim"]
+	path = .vim/bundle/jshint2.vim
+	url = https://github.com/Shutnik/jshint2.vim.git
