--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,9 @@
 [submodule ".vim/bundle/limelight.vim"]
 	path = .vim/bundle/limelight.vim
 	url = https://github.com/junegunn/limelight.vim.git
+[submodule ".vim/bundle/vim-fugitive"]
+	path = .vim/bundle/vim-fugitive
+	url = https://github.com/tpope/vim-fugitive.git
+[submodule "vim-git"]
+	path = vim-git
+	url = https://github.com/tpope/vim-git.git
