--- a/tmux.conf
+++ b/tmux.conf
@@ -17,6 +17,9 @@ bind r source-file ~/.tmux.conf
 # reset escape delay
 set -s escape-time 0
 
+# new window with layout
+bind space run-shell "~/bin/tmux-new-window-with-layout"
+
 # Splitting windows into panes
 bind v split-window -h
 bind s split-window -v
