add vim plugin for haxe

--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,9 @@
 [submodule ".vim/bundle/vim-airline"]
 	path = .vim/bundle/vim-airline
 	url = https://github.com/bling/vim-airline.git
+[submodule "vaxe"]
+	path = vaxe
+	url = https://github.com/jdonaldson/vaxe.git
+[submodule ".vim/bundle/vaxe"]
+	path = .vim/bundle/vaxe
+	url = https://github.com/jdonaldson/vaxe.git
