changed binding for creating a new tmux window with a custom layout to a key binding that makes more sense to me

--- a/tmux.conf
+++ b/tmux.conf
@@ -18,7 +18,7 @@ bind r source-file ~/.tmux.conf
 set -s escape-time 0
 
 # new window with layout
-bind space run-shell "~/bin/tmux-new-window-with-layout"
+bind C-n run-shell "~/bin/tmux-new-window-with-layout"
 
 # Splitting windows into panes
 bind v split-window -h
