--- a/.gitmodules
+++ b/.gitmodules
@@ -55,9 +55,6 @@
 [submodule ".vim/bundle/SyntaxRange"]
 	path = .vim/bundle/SyntaxRange
 	url = https://github.com/vim-scripts/SyntaxRange.git
-[submodule ".vim/bundle/jshint2.vim"]
-	path = .vim/bundle/jshint2.vim
-	url = https://github.com/Shutnik/jshint2.vim.git
 [submodule ".vim/bundle/closetag.vim"]
 	path = .vim/bundle/closetag.vim
 	url = https://github.com/vim-scripts/closetag.vim.git
@@ -88,3 +85,9 @@
 [submodule ".vim/bundle/vim-gitgutter"]
 	path = .vim/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+[submodule ".vim/bundle/syntastic"]
+	path = .vim/bundle/syntastic
+	url = https://github.com/scrooloose/syntastic.git
+[submodule ".vim/bundle/cflint-syntastic"]
+	path = .vim/bundle/cflint-syntastic
+	url = https://github.com/cflint/cflint-syntastic.git
