--- a/.gitmodules
+++ b/.gitmodules
@@ -48,7 +48,7 @@
 	url = https://github.com/tpope/vim-abolish.git
 [submodule ".vim/bundle/cf-utils.vim"]
 	path = .vim/bundle/cf-utils.vim
-	url = https://github.com/davejlong/cf-utils.vim.git
+	url = https://github.com/jontrainor/cf-utils.vim.git
 [submodule ".vim/bundle/matcher-ctrlp"]
 	path = .vim/bundle/matcher-ctrlp
 	url = https://github.com/burke/matcher.git
