--- a/tmux.conf
+++ b/tmux.conf
@@ -89,3 +89,17 @@ bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 # # Linux clipboard support
 # bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer" 
 # bind C-y run "tmux save-buffer - | xclip -i -selection clipboard"
+
+# add plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @shell_mode 'vi'
+
+set -g @plugin 'tmux-plugins/tmux-open'
+
+# Initialize TMUX plugin manager
+run '~/.tmux/plugins/tpm/tpm'
