--- a/tmux.conf
+++ b/tmux.conf
@@ -93,6 +93,7 @@ bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
 # add plugins
 set -g @plugin 'tmux-plugins/tpm'
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @continuum-restore 'on'
 
