--- a/tmux.conf
+++ b/tmux.conf
@@ -38,10 +38,7 @@ bind-key -r C-l resize-pane -R
 set-option -g repeat-time 700
 
 #enable mouse to switch panes
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set-option -g mouse on
 
 #activity monitoring
 setw -g monitor-activity on
@@ -101,6 +98,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @shell_mode 'vi'
 
 set -g @plugin 'tmux-plugins/tmux-open'
+
+set -g @plugin 'tmux-plugins/tmux-scroll-copy-mode'
 
 # Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
