ctrlp uses ctrlp-py-matcher with ag and visible whitespace can be toggled on/off

--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule ".vim/bundle/vim-jsx"]
 	path = .vim/bundle/vim-jsx
 	url = https://github.com/mxw/vim-jsx.git
+[submodule ".vim/bundle/ctrlp-py-matcher"]
+	path = .vim/bundle/ctrlp-py-matcher
+	url = https://github.com/FelikZ/ctrlp-py-matcher.git
