update vim-vinegar, set vim fileformat to work standard to eliminate autochanging eol/eof chars, ctrlp uses ag to search, reset current working directory when searching with ack from the key map in vim, set ini comment format so vim comments properly for python inis

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,9 @@ bind-key -r C-k resize-pane -U
 bind-key -r C-l resize-pane -R
 set-option -g repeat-time 700
 
+# undo pane layout change
+bind-key u select-layout -o
+
 #enable mouse to switch panes
 set-option -g mouse on
 
