--- a/tmux.conf
+++ b/tmux.conf
@@ -82,9 +82,18 @@ unbind &
 bind & run-shell " ~/bin/tmux-close-window "
 
 # OSX Clipboard support
+set-option -g default-shell "sh"
 set-option -g default-command "reattach-to-user-namespace -l sh"
-bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
-bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
+
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+# bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
+# bind C-c run "tmux save-buffer - | reattach-to-user-namespace pbcopy"
  
 # # Linux clipboard support
 # bind C-p run "tmux set-buffer \"$(xclip -o -selection clipboard)\"; tmux paste-buffer" 
