--- a/tmux.conf
+++ b/tmux.conf
@@ -82,13 +82,10 @@ unbind &
 bind & run-shell " ~/bin/tmux-close-window "
 
 # OSX Clipboard support
-set-option -g default-command "reattach-to-user-namespace -l sh"
+set-option -g default-command "reattach-to-user-namespace -l bash"
 
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 bind ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 # bind C-v run "tmux set-buffer $(reattach-to-user-namespace pbpaste); tmux paste-buffer"
