--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule ".vim/bundle/syntastic-local-eslint.vim"]
 	path = .vim/bundle/syntastic-local-eslint.vim
 	url = https://github.com/mtscout6/syntastic-local-eslint.vim.git
+[submodule ".vim/bundle/vim-unimpaired"]
+	path = .vim/bundle/vim-unimpaired
+	url = https://github.com/tpope/vim-unimpaired.git
