--- a/tmux.conf
+++ b/tmux.conf
@@ -31,10 +31,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Resizing panes
-bind-key -r C-h resize-pane -L
-bind-key -r C-j resize-pane -D
-bind-key -r C-k resize-pane -U
-bind-key -r C-l resize-pane -R
+bind-key -r H resize-pane -L
+bind-key -r J resize-pane -D
+bind-key -r K resize-pane -U
+bind-key -r L resize-pane -R
 set-option -g repeat-time 700
 
 # undo pane layout change
