add useful vim plugins and fun tmux plugins

--- a/tmux.conf
+++ b/tmux.conf
@@ -70,8 +70,9 @@ set -g status-fg colour246
 # left chunk: " »"
 set -g status-left '#[fg=colour39,italics] »'
 set -g status-left-length 5
-# right chunk of status: "Session | Hostname | [Pane]:[Window]"
-set -g status-right '#[fg=colour246]#F | #S #[bg=colour241,fg=colour248]  #H #[bg=colour253,fg=colour241]  #P:#I '
+set -g status-right-length 100
+# right chunk of status: "Spotify Status Artist: Track | CPU | | session | Hostname | [Pane]:[Window]"
+set -g status-right '#{spotify_status} #{spotify_artist}: #{spotify_track} | #{cpu_percentage} | #S #[bg=colour241,fg=colour248]  #H #[bg=colour253,fg=colour241]  #P:#I '
 # window labels: | # Title | # Title (left side)
 set -g window-status-format '|#[fg=colour190] #I #[fg=colour246] #W '
 set -g window-status-current-format '|#[fg=colour190] #I #[bg=colour250,fg=colour236] #W '
@@ -108,6 +109,10 @@ set -g @shell_mode 'vi'
 set -g @plugin 'tmux-plugins/tmux-open'
 
 set -g @plugin 'tmux-plugins/tmux-scroll-copy-mode'
+
+# for funsies
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'robhurring/tmux-spotify'
 
 # Initialize TMUX plugin manager
 run '~/.tmux/plugins/tpm/tpm'
